--- a/TS_Studio.html
+++ b/TS_Studio.html
@@ -31,7 +31,7 @@
 
         </style>
 <h1 align="center">PROFESSIONAL PHOTOGRAHER</h1>
-<center><img src="C:\Users\balaz\OneDrive\Desktop\tej\yo.jpg"></center>
+<center><img src="yo.jpg"></center>
 <p align="center">Teju, a skilled professional photographer, specializes in capturing memorable moments during various occasions and special events. With a keen eye for detail and a passion for storytelling through imagery, Teju excels in creating visually stunning and meaningful photographs that beautifully document and celebrate life's special moments. Whether it's weddings, parties, or other significant milestones, Teju brings creativity and expertise to every project, ensuring lasting memories for clients.</p>
     <hr>
     <h2 align="center">Explore our beautiful collection of photos capturing special moments.</h2>
