--- a/TS_Studio.html
+++ b/TS_Studio.html
@@ -51,7 +51,7 @@
         }
     </style>
    <section  align="center" class="gallery" id="mk">
-    <img src="C:\Users\balaz\OneDrive\Desktop\tej\WhatsApp Image 2023-12-04 at 17.57.34_2352f6ca.jpg" alt="Photo 1" >
+    <img src="WhatsApp Image 2023-12-04 at 17.57.34_2352f6ca.jpg" alt="Photo 1" >
     <img src="" alt="">
     <img src="WhatsApp Image 2023-12-04 at 17.57.34_607fd4d0.jpg" alt="Photo 2"  >
     
