--- a/TS_Studio.html
+++ b/TS_Studio.html
@@ -7,7 +7,7 @@
             <a href="#">Home</a>
             <a href="#">Portfolio</a>
             <a href="#">About</a>
-            <a href="#">Contact</a>
+            <a href=" https://maps.app.goo.gl/bbDVKFxmQVmmzZQS8 " target>Location</a>
         </nav>
         <style>
              nav {
