--- a/TS_Studio.html
+++ b/TS_Studio.html
@@ -5,9 +5,9 @@
     <body>
         <nav>
             <a href="#">Home</a>
-            <a href="#">Portfolio</a>
+            <a href="" target="_blank">Portfolio</a>
             <a href="#">About</a>
-            <a href=" https://maps.app.goo.gl/bbDVKFxmQVmmzZQS8 " target>Location</a>
+            <a href=" https://maps.app.goo.gl/bbDVKFxmQVmmzZQS8 " target="_blank">Location</a>
         </nav>
         <style>
              nav {
