--- a/TS_Studio.html
+++ b/TS_Studio.html
@@ -5,7 +5,7 @@
     <body>
         <nav>
             <a href="#">Home</a>
-            <a href="" target="_blank">Portfolio</a>
+            <a href="https://instagram.com/vickky_teju?igshid=YTQwZjQ0NmI0OA==" target="_blank">Portfolio</a>
             <a href="#">About</a>
             <a href=" https://maps.app.goo.gl/bbDVKFxmQVmmzZQS8 " target="_blank">Location</a>
         </nav>
